install(FILES
    IIDCCamera.cnoid
    IIDCCamera.py
    IIDCMultiCamera.cnoid
    IIDCMultiCamera.py
    V4L2Camera.cnoid
    V4L2Camera.py
    V4L2MultiCamera.cnoid
    V4L2MultiCamera.py
    V4L2Camera-HRP2KAI.cnoid
    V4L2Camera-HRP2KAI.py
    SyncV4L2Camera-HRP2KAI.cnoid
    SyncV4L2Camera-HRP2KAI.py
    DESTINATION $ENV{HOME}/cnoid_project
)
