install(FILES
    IIDCCamera.cnoid
    IIDCCamera.py
    IIDCMultiCamera.cnoid
    IIDCMultiCamera.py
    V4L2Camera.cnoid
    V4L2Camera.py
    V4L2MultiCamera.cnoid
    V4L2MultiCamera.py
    V4L2Camera-HRP.cnoid
    V4L2Camera-HRP.py
    SyncV4L2Camera-HRP.cnoid
    SyncV4L2Camera-HRP.py
    SyncLentiMarkV4L2Camera-HRP.cnoid
    SyncLentiMarkV4L2Camera-HRP.py
    DESTINATION $ENV{HOME}/cnoid_project
)
